# LatticeFlow

./: .age-recipients  .gitignore  AGENTS.md  Cargo.toml  README.md  fnox.toml  mise.toml  repomix-macros-header.txt  repomix-macros.md  repomix-portability-header.txt  repomix-portability.md  repomix-sql-body.md  repomix-sql-capability.md  repomix-sql-deliberation-final.md  repomix-sql-deliberation.md  repomix-sql-header.txt  repomix-sql-prompt.txt
.claude/: settings.local.json
.githooks/: pre-commit
.hive/: issues.jsonl  memories.jsonl
crates/adapters/: Cargo.toml  README.md
crates/bridge-queue-redis/: Cargo.toml  README.md
crates/bridge-queue-redis/src/: lib.rs
crates/cap-blob-fs/: Cargo.toml  README.md
crates/cap-blob-opendal/: Cargo.toml  README.md
crates/cap-blob-opendal/src/: lib.rs
crates/cap-cache-redis/: Cargo.toml  README.md
crates/cap-dedupe-redis/: Cargo.toml  README.md
crates/cap-http-reqwest/: Cargo.toml  README.md
crates/cap-http-reqwest/src/: lib.rs
crates/cap-http-workers/: Cargo.toml  DESIGN.md  README.md
crates/cap-http-workers/src/: lib.rs
crates/cap-http-workers/workerd-tests/: Cargo.toml  package-lock.json  package.json  vitest.config.ts  wrangler.toml
crates/cap-http-workers/workerd-tests/src/: lib.rs
crates/cap-http-workers/workerd-tests/tests/: mf.ts  timeout.spec.ts
crates/cap-kv-opendal/: Cargo.toml  README.md
crates/cap-kv-opendal/src/: lib.rs
crates/cap-kv-sqlite/: Cargo.toml  README.md
crates/cap-opendal-core/: Cargo.toml  README.md
crates/cap-opendal-core/src/: error.rs  lib.rs
crates/capabilities/: Cargo.toml  README.md
crates/capabilities/src/: hints.rs  lib.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/cli/tests/: bindings_lock.rs  run_local.rs  serve.rs
crates/connector-spec/: Cargo.toml  README.md
crates/connectors-std/: Cargo.toml  README.md
crates/dag-core/: Cargo.toml  README.md
crates/dag-core/src/: builder.rs  determinism.rs  diagnostics.rs  effects.rs  effects_registry.rs  ir.rs  lib.rs  schema.rs
crates/dag-macros/: Cargo.toml  README.md
crates/dag-macros/src/: lib.rs
crates/dag-macros/tests/: flow_enum.rs  node_hints.rs  trybuild.rs  workflow_edge_controls.rs  workflow_if.rs  workflow_switch.rs  workflow_timeout.rs
crates/dag-macros/tests/ui/: flow_enum_not_enum.rs  flow_enum_not_enum.stderr  node_blob_determinism_conflict.rs  node_blob_determinism_conflict.stderr  node_db_effect_conflict.rs  node_db_effect_conflict.stderr  node_determinism_hint_conflict.rs  node_determinism_hint_conflict.stderr  node_effect_hint_conflict.rs  node_effect_hint_conflict.stderr  node_invalid_effect.rs  node_invalid_effect.stderr  node_missing_name.rs  node_missing_name.stderr  node_queue_effect_conflict.rs  node_queue_effect_conflict.stderr  workflow_buffer_duplicate.rs  workflow_buffer_duplicate.stderr  workflow_buffer_invalid_key.rs  workflow_buffer_invalid_key.stderr  workflow_buffer_max_items_string.rs  workflow_buffer_max_items_string.stderr  workflow_buffer_missing_edge.rs  workflow_buffer_missing_edge.stderr  workflow_delivery_duplicate.rs  workflow_delivery_duplicate.stderr  workflow_delivery_invalid_mode.rs  workflow_delivery_invalid_mode.stderr  workflow_delivery_missing_edge.rs  workflow_delivery_missing_edge.stderr  workflow_delivery_mode_string.rs  workflow_delivery_mode_string.stderr  workflow_duplicate_alias.rs  workflow_duplicate_alias.stderr  workflow_if_duplicate_source.rs  workflow_if_duplicate_source.stderr  workflow_if_else_not_ident.rs  workflow_if_else_not_ident.stderr  workflow_if_invalid_key.rs  workflow_if_invalid_key.stderr  (+40 more)
crates/exporters/: Cargo.toml  README.md
crates/exporters/src/: lib.rs
crates/host-inproc/: Cargo.toml
crates/host-inproc/src/: lib.rs
crates/host-queue-redis/: Cargo.toml  README.md
crates/host-temporal/: Cargo.toml  README.md
crates/host-web-axum/: Cargo.toml  README.md
crates/host-web-axum/src/: lib.rs
crates/host-workers/: Cargo.toml  README.md  wrangler.toml
crates/host-workers/src/: lib.rs
crates/importer-n8n/: Cargo.toml  README.md
crates/kernel-exec/: Cargo.toml  README.md
crates/kernel-exec/src/: lib.rs
crates/kernel-plan/: Cargo.toml  README.md
crates/kernel-plan/src/: lib.rs
crates/plugin-python/: Cargo.toml  README.md
crates/plugin-wasi/: Cargo.toml  README.md
crates/policy-engine/: Cargo.toml  README.md
crates/registry-cert/: Cargo.toml  README.md
crates/registry-client/: Cargo.toml  README.md
crates/studio-backend/: Cargo.toml  README.md
crates/testing-harness-idem/: Cargo.toml  README.md
crates/types-common/: Cargo.toml  README.md
examples/s1_echo/: Cargo.toml
examples/s2_site/: Cargo.toml
examples/s3_branching/: Cargo.toml
examples/s4_preflight/: Cargo.toml  bindings.lock.json  regen_bindings_lock.sh
examples/s5_unsupported_surface/: Cargo.toml
examples/s6_spill/: Cargo.toml  bindings.lock.json  regen_bindings_lock.sh
impl-docs/: README.md  error-codes.md  error-taxonomy.md  impl-plan.md  metrics.md  opendal-capability-plan.md  phase3-host-runtime-refactor.md  recontextualization-bindings-resolver.md  rust-workflow-tdd-rfc.md  surface-and-buildout.md  user-stories.md  work-log.md
impl-docs/adrs/: adr-0001-invocation-abi-and-metadata.md  adr-0002-control-surfaces-0-1-scope.md  adr-0003-workers-native-constraints-and-spill.md  adr-0004-retry-ownership.md  adr-0005-determinism-claims-policy.md
impl-docs/archive/: impl-plan-longform.md  rust-workflow-tdd-rfc-longform-2025-09-18.md
impl-docs/cloudflare/: IMPL_PLAN.md  TECHNICAL_DESIGN_DOCUMENT.md  USER_STORIES.md
impl-docs/mcp/: IMPL_PLAN.md  TECHNICAL_DESIGN_DOCUMENT.md  USER_STORIES.md
impl-docs/phase_2_finish_out_OLD/: task_capability_expansion.md  task_metrics_instrumentation.md  task_property_tests.md  task_sse_streaming.md  universal_context.md
impl-docs/roadmap/: epic-00-docs-and-hygiene.md  epic-01-contract-0.1.md  epic-02-workers-host-minimal.md  epic-03-cloudflare-caps-minimal.md  epic-04-resend-vertical-slice.md  epics.md  (+3 more)
schemas/: flow_ir.schema.json
scripts/: crypto.py
(+36 files in other folders)
