[workspace]
resolver = "3"
members = [
  "crates/adapters",
  "crates/cap-blob-fs",
  "crates/cap-cache-redis",
  "crates/cap-dedupe-redis",
  "crates/cap-http-reqwest",
  "crates/cap-kv-sqlite",
  "crates/capabilities",
  "crates/cli",
  "crates/connector-spec",
  "crates/connectors-std",
  "crates/dag-core",
  "crates/dag-macros",
  "crates/exporters",
  "crates/host-queue-redis",
  "crates/host-temporal",
  "crates/host-web-axum",
  "crates/importer-n8n",
  "crates/kernel-exec",
  "crates/kernel-plan",
  "crates/plugin-python",
  "crates/plugin-wasi",
  "crates/policy-engine",
  "crates/registry-cert",
  "crates/registry-client",
  "crates/studio-backend",
  "crates/testing-harness-idem",
  "crates/types-common",
  "examples/s1_echo"
]

[workspace.package]
authors = ["LatticeFlow Authors <opensource@latticeflow.dev>"]
edition = "2024"
homepage = "https://github.com/psu3d0/LatticeFlow"
license = "MIT OR Apache-2.0"
repository = "https://github.com/psu3d0/LatticeFlow"
rust-version = "1.90"
description = "Rust workflow platform workspace"

[workspace.metadata]
msrv = "1.90"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["json"] }
bytes = "1"
clap = { version = "4.5", features = ["derive"] }
config = "0.14"
redis = { version = "0.32.7", features = ["tokio-comp"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = "0.8"
thiserror = "1"
tonic = { version = "0.11", features = ["transport"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
futures = "0.3"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
serde_with = "3"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
wasmtime = { version = "16", features = ["async"] }
wit-bindgen = "0.24"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
rusqlite = { version = "0.30", features = ["bundled"] }
flate2 = "1"
walkdir = "2"
tempfile = "3"
once_cell = "1.19"
semver = { version = "1.0", features = ["serde"] }
trybuild = "1.0"
