[package]
name = "cap-blob-fs"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Filesystem-backed blob capability with deterministic by-hash reads."

[dependencies]
capabilities = { path = "../capabilities" }
anyhow.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
walkdir.workspace = true
