[package]
name = "cap-dedupe-redis"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Redis-backed dedupe store capability for exactly-once delivery guarantees."

[dependencies]
capabilities = { path = "../capabilities" }
anyhow.workspace = true
redis.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
