[package]
name = "cap-http-reqwest"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Reqwest-backed HTTP capability implementations for LatticeFlow."

[dependencies]
capabilities = { path = "../capabilities" }
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
