[package]
name = "capabilities"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared capability traits and registries consumed across Lattice hosts and nodes."

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
dag-core = { path = "../dag-core" }
tokio.workspace = true
