[package]
name = "flows-cli"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false
description = "Command-line tools for authoring, validating, and running Lattice workflows."

[[bin]]
name = "flows"
path = "src/main.rs"

[dependencies]
adapters = { path = "../adapters" }
dag-core = { path = "../dag-core" }
kernel-plan = { path = "../kernel-plan" }
kernel-exec = { path = "../kernel-exec" }
capabilities = { path = "../capabilities" }
cap-http-reqwest = { path = "../cap-http-reqwest" }
host-web-axum = { path = "../host-web-axum" }
registry-client = { path = "../registry-client" }
registry-cert = { path = "../registry-cert" }
connector-spec = { path = "../connector-spec" }
exporters = { path = "../exporters" }
example-s1-echo = { path = "../../examples/s1_echo" }
example-s2-site = { path = "../../examples/s2_site" }
example-s3-branching = { path = "../../examples/s3_branching" }
example-s4-preflight = { path = "../../examples/s4_preflight" }
example-s5-unsupported-surface = { path = "../../examples/s5_unsupported_surface" }
example-s6-spill = { path = "../../examples/s6_spill" }
host-inproc = { path = "../host-inproc" }
anyhow.workspace = true
clap.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tower = { workspace = true, features = ["make"] }
futures.workspace = true
metrics.workspace = true
metrics-util.workspace = true
sha2 = "0.10"

[dev-dependencies]
assert_cmd = "2.0"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
proptest.workspace = true
