[package]
name = "dag-macros"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Procedural macros and DSL surface for authoring LatticeFlow workflows."

[lib]
proc-macro = true

[dependencies]
dag-core = { path = "../dag-core" }
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
semver.workspace = true

[dev-dependencies]
trybuild.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
