[package]
name = "host-temporal"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Temporal adapter and activity worker integration for LatticeFlow."

[dependencies]
dag-core = { path = "../dag-core" }
kernel-plan = { path = "../kernel-plan" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
