[package]
name = "host-web-axum"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Axum-based web host for Lattice workflows (HTTP triggers, SSE, deadlines)."

[dependencies]
dag-core = { path = "../dag-core" }
kernel-exec = { path = "../kernel-exec" }
kernel-plan = { path = "../kernel-plan" }
capabilities = { path = "../capabilities" }
host-inproc = { path = "../host-inproc" }
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
hyper.workspace = true
tower = { workspace = true, features = ["make"] }
futures.workspace = true
metrics.workspace = true
async-stream.workspace = true
serde_urlencoded = "0.7"

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
metrics-util.workspace = true
proptest.workspace = true
