[package]
name = "importer-n8n"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "n8n workflow importer that maps JSON graphs into Lattice IR."

[dependencies]
dag-core = { path = "../dag-core" }
connector-spec = { path = "../connector-spec" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true
walkdir.workspace = true
