[package]
name = "kernel-exec"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "In-process runtime for executing Lattice plans with scheduling, backpressure, and capability injection."

[features]
default = ["spill-fs"]
wasm = []
spill-fs = ["dep:tempfile"]

[dependencies]
dag-core = { path = "../dag-core" }
kernel-plan = { path = "../kernel-plan" }
capabilities = { path = "../capabilities" }
anyhow.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
async-trait.workspace = true
metrics.workspace = true
tempfile = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tokio-util.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", default-features = false, features = ["rt", "time", "sync", "macros"] }

[dev-dependencies]
metrics-util.workspace = true
proptest.workspace = true
