[package]
name = "policy-engine"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CEL-based policy evaluation and evidence generation for LatticeFlow deployments."

[dependencies]
dag-core = { path = "../dag-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
